# cristian_marcu_21032025

./: CMakeLists.txt  CompressedData.cpp  ComputePipeline.cpp  ImageDecoder.cpp  README.md  main.cpp
include/: CompressedData.hpp  ComputePipeline.hpp  Image.hpp  ImageDecoder.hpp  Metadata.hpp
